--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -19,6 +19,7 @@
       
     --border-radius-s: 4px;
         --border-radius-m: 8px;
+        --border-radius-l: 20px;
       
         --space-s: 4px;
         --space-m: 8px;
